fix spacings

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,7 +19,7 @@ a {
 }
 
 .itemList span{
-  font-size: 1.3rem!important;
+  font-size: 1.6rem!important;
 }
 
 .solutionInge {
